# task-decomposition-spike

./: .aider.conf.yml  .gitignore  LICENSE.txt  README.md  cost_calculator.py  main.py  pyproject.toml
docs/: delegate_context_with_pydantic_ai.md
src/task_decomposition/: delegate_runner.py  delegate_runner_agent.py  delegate_runner_impl.py  main.py  models.py  models_io.py  models_schema.py  task_graph_builder.py  task_plan_builder.py  task_plan_executor.py  task_plan_validator.py
tests/: test_convert_task_outputs_to_schema.py  test_task_graph_builder.py  test_task_plan_validator.py
