[project]
name = "task-decomposition-spike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inflect>=7.5.0",
    "pydantic-ai>=1.27.0",
    "pytest>=9.0.2",
]

[project.scripts]
task_decomposition = "task_decomposition.main:main"
